kubernetes/apps/metube/metube/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: metube
  labels:
    app: metube
spec:
  type: ClusterIP
  selector:
    app: metube
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
