kubernetes/apps/metube/metube/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube
  namespace: metube
spec:
  hostnames:
    - metube.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: metube
          namespace: metube
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
